src/objects/Channel_Business_Review__c.object
<CustomObject>
    <fields>
        <fullName>Sales_YTD_Compared_to_Budget__c</fullName>
        <formula>IF (Joint_Business_Plan__r.Budget_Current_Year_formula__c == 0, 0, (Joint_Business_Plan__r.Rund_Rate_Ongoing_year_Formula__c -  Joint_Business_Plan__r.Budget_Current_Year_formula__c) /Joint_Business_Plan__r.Budget_Current_Year_formula__c)</formula>
        <label>Runrate vs Budget (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Sales_YTD_Compared_to_Forecast__c</fullName>
        <formula>IF (Joint_Business_Plan__r.Forecast_Ongoing_Year_Formula__c == 0, 0, ((Joint_Business_Plan__r.Rund_Rate_Ongoing_year_Formula__c - Joint_Business_Plan__r.Forecast_Ongoing_Year_Formula__c)/Joint_Business_Plan__r.Forecast_Ongoing_Year_Formula__c))</formula>
        <label>Runrate vs Forecast (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Sales_YTD_Compared_to_Last_Year__c</fullName>
        <formula>IF (Joint_Business_Plan__r.Sales_previous_year_formula__c == 0, 0, ((Joint_Business_Plan__r.Rund_Rate_Ongoing_year_Formula__c - Joint_Business_Plan__r.Sales_previous_year_formula__c)/Joint_Business_Plan__r.Sales_previous_year_formula__c))</formula>
        <label>Runrate vs Last Year (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Secondary_Channel_Class__c</fullName>
        <description>R5 - Secondary Channel Class from Channel Partner Business Plan</description>
        <formula>Joint_Business_Plan__r.Secondary_Channel_Class__c</formula>
        <label>Secondary Channel Class</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>R5 - Status</description>
        <inlineHelpText>Change status or send to approval when completed. Note that fields indicated with ! (exclamation mark) must first be completed.</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Obsolete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_Actions_Completed__c</fullName>
        <description>R5 - Contains the number of actions are &quot;Completed&quot; status. Field is updated thru trigger &quot;ClsTriggerChannelBusinessReview&quot; - KAD-01052</description>
        <label>Total Number of Actions Completed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_Actions_In_Progress__c</fullName>
        <description>R5 - Contains the number of actions are &quot;In Progress&quot; status. Field is updated thru trigger &quot;ClsTriggerChannelBusinessReview&quot; - KAD-01052</description>
        <label>Total Number of Actions In Progress</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>XA_Contracts__c</fullName>
        <description>R5 Formula field to set up XA- Contracts</description>
        <formula>HYPERLINK(&quot;/apex/Apttus__DocumentGenerate?id=&quot;&amp;Id &amp; &quot;&amp;action=Generate_Document&amp;templateType=Channel Partner Business Review&quot;, IMAGE(&quot;/resource/Apttus__Button_Generate&quot;, &quot;Generate&quot;),&quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Click GENERATE button to create a standard format file from the content. You can choose between several file formats and languages.</inlineHelpText>
        <label>Print Document</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>market_Scope_Channel_Class_Hideen__c</fullName>
        <description>It  is created for X-Author Document to populate the Channel class values in Channel Partner Business Review</description>
        <formula>(TEXT(Joint_Business_Plan__r.Channel_Market_Coverage__r.Primary_Channel_Class__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>market Scope Channel Class Hideen</label>
        <type>Text</type>
    </fields>
    <label>Channel Partner Business Review</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Business Review Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Channel Partner Business Reviews</pluralLabel>
    <recordTypes>
        <fullName>Channel_Business_Review_Default</fullName>
        <active>true</active>
        <description>R5 Channel Business Review Default Record Type</description>
        <label>Channel Business Review Default</label>
    </recordTypes>
    <recordTypes>
        <fullName>Channel_End_Period_Business_Review</fullName>
        <active>true</active>
        <description>Review done in the end of planning period to &quot;close the planning period&quot;. After the review, a new plan for upcoming period is typically generated. ABB persons involved are normally sales responsible and Channel Manager</description>
        <label>End-Period Business Review</label>
    </recordTypes>
    <recordTypes>
        <fullName>Channel_End_Period_Business_Review_Detail</fullName>
        <active>true</active>
        <description>Review done in the end of planning period to &quot;close the planning period&quot;. After the review, a new plan for upcoming period is typically generated. ABB persons involved are normally sales responsible and Channel Manager</description>
        <label>End-Period Business Review Detail</label>
    </recordTypes>
    <recordTypes>
        <fullName>Channel_Mid_Period_Business_Review</fullName>
        <active>true</active>
        <description>Review done during the planning period. In addition to normal sales review, target is also to check/ adjust the direction compared to plan. Typically executed by sales persons responsible for supporting the sales of the partner.</description>
        <label>Mid-Period Business Review</label>
    </recordTypes>
    <recordTypes>
        <fullName>Channel_Mid_Period_Business_Review_Detail</fullName>
        <active>true</active>
        <description>Review done during the planning period. In addition to normal sales review, target is also to check/ adjust the direction compared to plan. Typically executed by sales persons responsible for supporting the sales of the partner.</description>
        <label>Mid-Period Business Review Detail</label>
    </recordTypes>
    <recordTypes>
        <fullName>Closed_Channel_Business_Review</fullName>
        <active>true</active>
        <description>R5 - Closed Channel Business Review</description>
        <label>Closed Channel Business Review</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>CBR_Status_Change_to_InApproval</fullName>
        <active>true</active>
        <description>R5 - Validation rule to check the mandatory fields are filled to change the status from Draft to In Approval</description>
        <errorConditionFormula>OR(
AND( 
RecordType.DeveloperName=&quot;Channel_Mid_Period_Business_Review&quot;, OR(ISPICKVAL(Status__c, &quot;In Approval&quot;), ISPICKVAL(Status__c, &quot;Completed&quot;)), OR(ISPICKVAL(Answer_1__c, &quot;None&quot;) ,ISPICKVAL(Answer_1__c, &quot;&quot;), ISPICKVAL(Answer_2__c, &quot;None&quot;), ISPICKVAL(Answer_2__c, &quot;&quot;),  Sales_Answer_1__c = FALSE, Actions_Answer_1__c = FALSE, General_Answer_5__c = FALSE, Sales_Answer_2__c = FALSE, ISBLANK(Actions_Answer_2__c),Partner_Answer_1__c=FALSE ) 
),
AND(
RecordType.DeveloperName=&quot;Channel_End_Period_Business_Review&quot;, OR(ISPICKVAL(Status__c, &quot;In Approval&quot;), ISPICKVAL(Status__c, &quot;Completed&quot;)), OR(ISPICKVAL(Answer_1__c, &quot;None&quot;), ISPICKVAL(Answer_1__c, &quot;&quot;), ISPICKVAL(Answer_2__c, &quot;None&quot;), ISPICKVAL(Answer_2__c, &quot;&quot;), Sales_Answer_1__c = FALSE, Actions_Answer_1__c = FALSE, Sales_Answer_2__c = FALSE, ISBLANK(Actions_Answer_2__c), Partner_Answer_1__c=FALSE, General_Answer_5__c =FALSE)))</errorConditionFormula>
        <errorMessage>Status cannot be changed. Scroll down to fill in the mandatory questions marked with a Red flag to proceed to the next stage.</errorMessage>
    </validationRules>
    <!--validationRules>
        <fullName>CBR_Validate_Required_Fields</fullName>
        <active>false</active>
        <description>R5 - Validation rule to check all the checkbox fields need to be filled out</description>
        <errorConditionFormula>OR(Sales_Answer_1__c = FALSE, Actions_Answer_1__c= FALSE, Partner_Answer_1__c=FALSE,ISBLANK(Sales_Answer_2__c),ISBLANK(Actions_Answer_2__c))</errorConditionFormula>
        <errorMessage>Cannot save the changes. Please fill the required fields.</errorMessage>
    </validationRules-->
    <validationRules>
        <fullName>Channel_Business_Review_Close_Check</fullName>
        <active>true</active>
        <description>R5 - If Account Plan Status is Closed, then the user should not edit the Channel partner business review</description>
        <errorConditionFormula>ISPICKVAL( Joint_Business_Plan__r.Status__c, &apos;Closed&apos;)</errorConditionFormula>
        <errorMessage>You cannot save the changes - Channel Partner Business Plan is Closed</errorMessage>
    </validationRules>
</CustomObject>